GPS aus dem Browser abfragen Laufende Positionsupdates Distanzberechnung (Haversine-Formel) Zustand speichern (Zeit + Strecke)

--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
   <button id="startBtn">Start</button>
   <button id="stopBtn" disabled>Stop</button>
 
-  <p id="time">Zeit: 0 Sekunden</p>
+  <p id="time">Zeit: 0 Sekunden | Distanz: 0 km</p>
+
 
   <script src="app.js"></script>
 </body>
