Nameneingabe und Lauf-zuordnung hinzugefügt

--- a/index.html
+++ b/index.html
@@ -9,8 +9,17 @@
 
   <h1>🏃‍♂️ Vereins Jogging App</h1>
 
+  <div>
+  <label for="runnerName">Name:</label><br>
+  <input type="text" id="runnerName" placeholder="Dein Name">
+</div>
+
+<br>
+
   <button id="startBtn">Start</button>
   <button id="stopBtn" disabled>Stop</button>
+
+  <p id="currentRunner"></p>
 
   <p id="time">Zeit: 0 Sekunden | Distanz: 0 km</p>
 
