Tabelle für alle gespeicherten Läufe hinzugefügt

--- a/index.html
+++ b/index.html
@@ -26,3 +26,21 @@
   <script src="app.js"></script>
 </body>
 </html>
+
+<h2>Alle Läufe</h2>
+
+<table id="runsTable" border="1" style="margin: 0 auto;">
+  <thead>
+    <tr>
+      <th>Name</th>
+      <th>Datum</th>
+      <th>Zeit</th>
+      <th>Distanz (km)</th>
+      <th>Pace (min/km)</th>
+    </tr>
+  </thead>
+  <tbody>
+    <!-- Läufe kommen hier rein -->
+  </tbody>
+</table>
+
