Tabelle direkt beim Laden anzeigen (inkl. Leerzustand)

--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@
 
 <h2>Alle Läufe</h2>
 
-<table id="runsTable" border="1" style="margin: 0 auto;">
+<p id="noRunsText">Noch keine Läufe vorhanden.</p>
+
+<table id="runsTable" border="1" style="margin: 0 auto; display: none;">
   <thead>
     <tr>
       <th>Name</th>
@@ -40,7 +42,7 @@
     </tr>
   </thead>
   <tbody>
-    <!-- Läufe kommen hier rein -->
   </tbody>
 </table>
+
 
