Podest für Top 3 nach Gesamtdistanz hinzugefügt

--- a/index.html
+++ b/index.html
@@ -45,5 +45,14 @@
   </tbody>
 </table>
 
+<h2>🏆 Podest – Gesamt-Distanz</h2>
+
+<ol id="podium">
+  <li>🥇 —</li>
+  <li>🥈 —</li>
+  <li>🥉 —</li>
+</ol>
+
+
 
 
