Podest umschaltbar: Distanz, Anzahl Läufe, Ø Pace

--- a/index.html
+++ b/index.html
@@ -45,13 +45,20 @@
   </tbody>
 </table>
 
-<h2>🏆 Podest – Gesamt-Distanz</h2>
+<h2>🏆 Podest</h2>
+
+<select id="podiumMode">
+  <option value="distance">Gesamtdistanz (km)</option>
+  <option value="count">Anzahl Läufe</option>
+  <option value="pace">Ø Pace (min/km)</option>
+</select>
 
 <ol id="podium">
   <li>🥇 —</li>
   <li>🥈 —</li>
   <li>🥉 —</li>
 </ol>
+
 
 
 
