Podest: Safari-Marker vollständig entfernt (::marker Fix)

--- a/index.html
+++ b/index.html
@@ -53,11 +53,12 @@
   <option value="pace">Ø Pace (min/km)</option>
 </select>
 
-<ol id="podium">
+<ul id="podium">
   <li>🥇 —</li>
   <li>🥈 —</li>
   <li>🥉 —</li>
-</ol>
+</ul>
+
 
 
 
